Fixed some bugs when 'wrap with details' option is enabled for manual selection: Display of filters inside the details element, order of the elements and state management.

--- a/css/flexible-views-manual-selection.css
+++ b/css/flexible-views-manual-selection.css
@@ -17,7 +17,7 @@ form.manual-selection-form .filter-wrap .form-item {
   margin: 0 1.5rem 0 0;
 }
 
-form.manual-selection-form .filter-wrap .form-item input,
+form.manual-selection-form .filter-wrap .form-item input[type="text"],
 form.manual-selection-form .filter-wrap .form-item select {
   width: 100%;
 }
